[SW-497] Spark 2.2 integration
- Fix Java Documentation
- Enable testing in trevis on OpenjDK8 and OracleJDK8
- Fix failing test. This is caused by a bug fix in Spark - https://issues.apache.org/jira/browse/SPARK-14584
- Remove usage of PermGem since on Java8 it's available
- Upgrade mininal python version to 2.7

(cherry picked from commit 215ea41790d867be5404871fe38c2b6109d7ce26)