@@ -23,9 +23,6 @@ test {
     // Increase heap size
     maxHeapSize = "4g"
 
-    // Increase PermGen
-    jvmArgs '-XX:MaxPermSize=384m'
-
     // Working dir will be root project
     workingDir = rootDir
 //    testLogging.showStandardStreams = true
